--- a/sections/crossref-en.html
+++ b/sections/crossref-en.html
@@ -139,9 +139,13 @@ This section provides details for each class and property defined by Mapping Qua
          <dt>is in domain of</dt>
          <dd>
             <a href="#https://alex-randles.github.io/MQV/#createdBy" title="https://alex-randles.github.io/MQV/#createdBy">createdBy</a>
-            <sup class="type-op" title="object property">op</sup>, <a href="#https://alex-randles.github.io/MQV/#mappingSource"
+            <sup class="type-op" title="object property">op</sup>, <a href="#https://alex-randles.github.io/MQV/#mappingPurpose"
+               title="https://alex-randles.github.io/MQV/#mappingPurpose">mappingPurpose</a>
+            <sup class="type-dp" title="data property">dp</sup>, <a href="#https://alex-randles.github.io/MQV/#mappingSource"
                title="https://alex-randles.github.io/MQV/#mappingSource">mappingSource</a>
-            <sup class="type-op" title="object property">op</sup>, <a href="#https://alex-randles.github.io/MQV/#toolsUsed" title="https://alex-randles.github.io/MQV/#toolsUsed">toolsUsed</a>
+            <sup class="type-op" title="object property">op</sup>, <a href="#https://alex-randles.github.io/MQV/#resultMessage"
+               title="https://alex-randles.github.io/MQV/#resultMessage">resultMessage</a>
+            <sup class="type-dp" title="data property">dp</sup>, <a href="#https://alex-randles.github.io/MQV/#toolsUsed" title="https://alex-randles.github.io/MQV/#toolsUsed">toolsUsed</a>
             <sup class="type-op" title="object property">op</sup>
          </dd>
          <dt>is in range of</dt>
@@ -1338,9 +1342,9 @@ This section provides details for each class and property defined by Mapping Qua
          <dl>
             <dt>has super-properties</dt>
             <dd>
-               <a href="http://www.w3.org/ns/prov#generated"
+               <a href="http://www.w3.org/ns/prov#used"
                   target="_blank"
-                  title="http://www.w3.org/ns/prov#generated">generated</a>
+                  title="http://www.w3.org/ns/prov#used">used</a>
                <sup class="type-op" title="object property">op</sup>
             </dd>
             <dt>has domain</dt>
@@ -1631,6 +1635,12 @@ This section provides details for each class and property defined by Mapping Qua
                   title="https://alex-randles.github.io/MQV/#MappingViolation">MappingViolation</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
+            <dt>has range</dt>
+            <dd>
+               <a href="http://www.w3.org/2001/XMLSchema#string"
+                  target="_blank"
+                  title="http://www.w3.org/2001/XMLSchema#string">string</a>
+            </dd>
          </dl>
       </div>
    </div>
@@ -1746,6 +1756,12 @@ This section provides details for each class and property defined by Mapping Qua
       </dl>
       <div class="description">
          <dl>
+            <dt>has domain</dt>
+            <dd>
+               <a href="#https://alex-randles.github.io/MQV/#MappingDocument"
+                  title="https://alex-randles.github.io/MQV/#MappingDocument">MappingDocument</a>
+               <sup class="type-c" title="class">c</sup>
+            </dd>
             <dt>has range</dt>
             <dd>
                <a href="http://www.w3.org/2001/XMLSchema#string"
@@ -1820,6 +1836,12 @@ This section provides details for each class and property defined by Mapping Qua
       </dl>
       <div class="description">
          <dl>
+            <dt>has domain</dt>
+            <dd>
+               <a href="#https://alex-randles.github.io/MQV/#MappingDocument"
+                  title="https://alex-randles.github.io/MQV/#MappingDocument">MappingDocument</a>
+               <sup class="type-c" title="class">c</sup>
+            </dd>
             <dt>has range</dt>
             <dd>
                <a href="http://www.w3.org/2001/XMLSchema#string"
