--- a/sections/description-en.html
+++ b/sections/description-en.html
@@ -17,15 +17,15 @@ These stages are categorized as  mapping quality assessment,  mapping quality re
 </p>
 
 <p> 
-<strong>Mapping quality assessment. </strong>In this stage, the mapping document (mqv:MappingDocument) is assessed. As assessment activity is captured through the mqv:MappingAssessment class. 
-The agent who initiated the process is also captured (prov:Agent). A mapping assessment activity may have quality requirements, which are captured through the mqv:QualityRequirement 
+<strong>Mapping quality assessment. </strong>In this stage, the mapping document (<font face="courier-new,  monospace">mqv:MappingDocument</font>) is assessed. As assessment activity is captured through the <font face="courier-new,  monospace">mqv:MappingAssessment</font> class. 
+The agent who initiated the process is also captured (prov:Agent). A mapping assessment activity may have quality requirements, which are captured through the <font face="courier-new,  monospace">mqv:QualityRequirement</font>
 class. This information allows the model to validate whether such quality requirements have been satisfied in the assessment and refinement stage. The model draws inspiration from 
 previous work where data quality was classified into categories (dqv:Category), dimensions (dqv:Dimension) and metrics (dqv:Metric) <a href="#bib-ZaveriEtAl">[ZaveriEtAl]</a>. 
 The DQV  <a href="#bib-DQV">[DQV]</a> defines these quality categories in a machine-readable format. In our model we also allow for refinements to be described. The model uses the information in such classes 
-to generate a mapping validation report <font face="courier-new,  monospace">(mqv:MappingValidationReport).</font>Each violation identified is then represented with the mqv:MappingViolation class. 
+to generate a mapping validation report <font face="courier-new,  monospace">(mqv:MappingValidationReport).</font>Each violation identified is then represented with the <font face="courier-new,  monospace">mqv:MappingViolation</font> class. 
 </p>
 <p> 
-<strong>Mapping quality refinement. </strong>This stage captures mapping refinements executed in the mapping. Each metric described using our model may have multiple refinements (mqv:MappingRefinement) associated with depending on the quality aspect being measured. The refinement executed in the mapping is associated to the identified violation through the property mqv:wasRefinedBy.
+<strong>Mapping quality refinement. </strong>This stage captures mapping refinements executed in the mapping. Each metric described using our model may have multiple refinements (<font face="courier-new,  monospace">mqv:MappingRefinement</font>) associated with depending on the quality aspect being measured. The refinement executed in the mapping is associated to the identified violation through the property <font face="courier-new,  monospace">mqv:wasRefinedBy</font>.
 </p>
 <p> 
 <strong>Mapping quality validation. </strong>Finally, our model provides quality information on the original mapping being assessed, and the mapping which has been refined in the process. As mentioned, each mapping assessment process may have quality requirements which can be validated at this stage. For instance, one may define a quality requirement for understandability related quality metrics to be of a particular value. In this stage, this can be validated by comparing the defined quality requirement and the resulted one.
