--- a/sections/abstract-en.html
+++ b/sections/abstract-en.html
@@ -1,2 +1,2 @@
 <h2>Abstract</h2><span class="markdown">
-The Prometheus Metric Ontology (PMO) provides a set of classes, properties, and restrictions that can be used to represent and interchange provenance and metadata information relating to Prometheus metric information.</span>
+The Change Detection Ontology (CDO) provides a set of classes, properties, and restrictions that can be used to represent and interchange provenance and metadata information relating to changes that occur within source data that has created an RDF dataset. It can also be specialized to create new classes and properties to model provenance and metadata information for domain specific changes.</span>
