--- a/sections/description-en.html
+++ b/sections/description-en.html
@@ -1,4 +1,4 @@
-<h2 id="desc" class="list">Prometheus Metric Ontology (PMO): Description <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
+<h2 id="desc" class="list">Change Detection Ontology (CDO): Description <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
 <span class="markdown">
 This is a placeholder text for the description of your ontology. The description should include an explanation and a diagram explaining how the classes are related, examples of usage, etc.</span>
 
