--- a/sections/introduction-en.html
+++ b/sections/introduction-en.html
@@ -7,15 +7,26 @@ This is a place holder text for the introduction. The introduction should briefl
 <table>
 <caption> <a href="#ns"> Table 1</a>: Namespaces used in the document </caption>
 <tbody>
-<tr><td><b>pmo</b></td><td>&lt;https://prometheus-metric-ontology.ericsson.com/#&gt;</td></tr>
+<tr><td><b>cdo</b></td><td>&lt;https://change-detection-ontology.adaptcentre.ie/#&gt;</td></tr>
 <tr><td></td><td></td></tr>
 <tr><td><b>owl</b></td><td>&lt;http://www.w3.org/2002/07/owl&gt;</td></tr>
+<tr><td><b>rei-deontic</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiDeontic.owl&gt;</td></tr>
+<tr><td><b>xsd</b></td><td>&lt;http://www.w3.org/2001/XMLSchema&gt;</td></tr>
+<tr><td><b>ReiAction</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiAction.owl&gt;</td></tr>
+<tr><td><b>skos</b></td><td>&lt;http://www.w3.org/2004/02/skos/core&gt;</td></tr>
+<tr><td><b>rdfs</b></td><td>&lt;http://www.w3.org/2000/01/rdf-schema&gt;</td></tr>
+<tr><td><b>ex</b></td><td>&lt;http://www.example.com&gt;</td></tr>
 <tr><td><b>rdf</b></td><td>&lt;http://www.w3.org/1999/02/22-rdf-syntax-ns&gt;</td></tr>
 <tr><td><b>terms</b></td><td>&lt;http://purl.org/dc/terms&gt;</td></tr>
 <tr><td><b>xml</b></td><td>&lt;http://www.w3.org/XML/1998/namespace&gt;</td></tr>
-<tr><td><b>xsd</b></td><td>&lt;http://www.w3.org/2001/XMLSchema&gt;</td></tr>
-<tr><td><b>rdfs</b></td><td>&lt;http://www.w3.org/2000/01/rdf-schema&gt;</td></tr>
+<tr><td><b>lode</b></td><td>&lt;http://linkedevents.org/ontology&gt;</td></tr>
+<tr><td><b>rei-constraint</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiConstraint.owl&gt;</td></tr>
+<tr><td><b>DUL</b></td><td>&lt;http://www.ontologydesignpatterns.org/ont/dul/DUL.owl&gt;</td></tr>
+<tr><td><b>time</b></td><td>&lt;http://www.w3.org/2006/time&gt;</td></tr>
 <tr><td><b>vann</b></td><td>&lt;http://purl.org/vocab/vann&gt;</td></tr>
+<tr><td><b>rei-policy</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiPolicy.owl&gt;</td></tr>
+<tr><td><b>foaf</b></td><td>&lt;http://xmlns.com/foaf/0.1&gt;</td></tr>
+<tr><td><b>rei-entity</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiEntity.owl&gt;</td></tr>
 </tbody>
 </table>
 </div>
