--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -1,88 +1,148 @@
-<h2 id="overv" class="list">Prometheus Metric Ontology (PMO): Overview <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
+<h2 id="overv" class="list">Change Detection Ontology (CDO): Overview <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
 <span class="markdown">
 This ontology has the following classes and properties.</span>
 <h4>Classes</h4>
 <ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
-      <a href="#Metric"
-         title="https://prometheus-metric-ontology.ericsson.com/#Metric">Metric</a>
+      <a href="#ChangeLog"
+         title="https://change-detection-ontology.adaptcentre.ie/#ChangeLog">ChangeLog</a>
    </li>
    <li>
-      <a href="#MetricQuery"
-         title="https://prometheus-metric-ontology.ericsson.com/#MetricQuery">MetricQuery</a>
+      <a href="#DatatypeSourceData"
+         title="https://change-detection-ontology.adaptcentre.ie/#DatatypeSourceData">
+         <span>DatatypeSourceData</span>
+      </a>
    </li>
    <li>
-      <a href="#MetricResult"
-         title="https://prometheus-metric-ontology.ericsson.com/#MetricResult">MetricResult</a>
+      <a href="#DeleteSourceData"
+         title="https://change-detection-ontology.adaptcentre.ie/#DeleteSourceData">
+         <span>DeleteSourceData</span>
+      </a>
    </li>
    <li>
-      <a href="#MetricResultSet"
-         title="https://prometheus-metric-ontology.ericsson.com/#MetricResultSet">MetricResultSet</a>
+      <a href="#InsertSourceData"
+         title="https://change-detection-ontology.adaptcentre.ie/#InsertSourceData">
+         <span>InsertSourceData</span>
+      </a>
+   </li>
+   <li>
+      <a href="#MergeSourceData"
+         title="https://change-detection-ontology.adaptcentre.ie/#MergeSourceData">
+         <span>MergeSourceData</span>
+      </a>
+   </li>
+   <li>
+      <a href="#MoveSourceData"
+         title="https://change-detection-ontology.adaptcentre.ie/#MoveSourceData">
+         <span>MoveSourceData</span>
+      </a>
+   </li>
+   <li>
+      <a href="#UpdateSourceData"
+         title="https://change-detection-ontology.adaptcentre.ie/#UpdateSourceData">
+         <span>UpdateSourceData</span>
+      </a>
    </li>
 </ul><h4>Object Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
-      <a href="#generatedByMetric"
-         title="https://prometheus-metric-ontology.ericsson.com/#generatedByMetric">generatedByMetric</a>
+      <a href="#hasEvent"
+         title="https://change-detection-ontology.adaptcentre.ie/#hasEvent">hasEvent</a>
    </li>
    <li>
-      <a href="#hasMetricQuery"
-         title="https://prometheus-metric-ontology.ericsson.com/#hasMetricQuery">hasMetricQuery</a>
+      <a href="#hasOwner"
+         title="https://change-detection-ontology.adaptcentre.ie/#hasOwner">hasOwner</a>
    </li>
    <li>
-      <a href="#hasResult"
-         title="https://prometheus-metric-ontology.ericsson.com/#hasResult">hasResult</a>
+      <a href="#inEventLog"
+         title="https://change-detection-ontology.adaptcentre.ie/#inEventLog">inEventLog</a>
    </li>
    <li>
-      <a href="#hasResultSet"
-         title="https://prometheus-metric-ontology.ericsson.com/#hasResultSet">hasResultSet</a>
-   </li>
-   <li>
-      <a href="#inMetricSet"
-         title="https://prometheus-metric-ontology.ericsson.com/#inMetricSet">inMetricSet</a>
-   </li>
-   <li>
-      <a href="#usedByMetric"
-         title="https://prometheus-metric-ontology.ericsson.com/#usedByMetric">usedByMetric</a>
+      <a href="#ownedBy"
+         title="https://change-detection-ontology.adaptcentre.ie/#ownedBy">ownedBy</a>
    </li>
 </ul><h4>Data Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
-      <a href="#hasCode"
-         title="https://prometheus-metric-ontology.ericsson.com/#hasCode">hasCode</a>
+      <a href="#detectionEnd"
+         title="https://change-detection-ontology.adaptcentre.ie/#detectionEnd">detectionEnd</a>
    </li>
    <li>
-      <a href="#hasHandler"
-         title="https://prometheus-metric-ontology.ericsson.com/#hasHandler">hasHandler</a>
+      <a href="#detectionStart"
+         title="https://change-detection-ontology.adaptcentre.ie/#detectionStart">detectionStart</a>
    </li>
    <li>
-      <a href="#hasInstance"
-         title="https://prometheus-metric-ontology.ericsson.com/#hasInstance">hasInstance</a>
+      <a href="#hasReason"
+         title="https://change-detection-ontology.adaptcentre.ie/#hasReason">hasReason</a>
    </li>
    <li>
-      <a href="#hasJob"
-         title="https://prometheus-metric-ontology.ericsson.com/#hasJob">hasJob</a>
+      <a href="#hasThreshold"
+         title="https://change-detection-ontology.adaptcentre.ie/#hasThreshold">
+         <span>hasThreshold</span>
+      </a>
+   </li>
+</ul><h4>Named Individuals</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
+   <li>
+      <a href="#http://www.example.com/changeLog" title="http://www.example.com/changeLog">
+         <span>change log</span>
+      </a>
    </li>
    <li>
-      <a href="#hasName"
-         title="https://prometheus-metric-ontology.ericsson.com/#hasName">hasName</a>
+      <a href="#http://www.example.com/datatypeChangeConstraint" title="http://www.example.com/datatypeChangeConstraint">
+         <span>datatype change constraint</span>
+      </a>
    </li>
    <li>
-      <a href="#hasQuery"
-         title="https://prometheus-metric-ontology.ericsson.com/#hasQuery">hasQuery</a>
+      <a href="#http://www.example.com/deleteChangeConstraint" title="http://www.example.com/deleteChangeConstraint">
+         <span>delete change constraint</span>
+      </a>
    </li>
    <li>
-      <a href="#hasResultType"
-         title="https://prometheus-metric-ontology.ericsson.com/#hasResultType">hasResultType</a>
+      <a href="#http://www.example.com/detectionTime" title="http://www.example.com/detectionTime">
+         <span>detection time</span>
+      </a>
    </li>
    <li>
-      <a href="#hasStatus"
-         title="https://prometheus-metric-ontology.ericsson.com/#hasStatus">hasStatus</a>
+      <a href="#http://www.example.com/insertChange" title="http://www.example.com/insertChange">
+         <span>insert change</span>
+      </a>
    </li>
    <li>
-      <a href="#hasTimestamp"
-         title="https://prometheus-metric-ontology.ericsson.com/#hasTimestamp">hasTimestamp</a>
+      <a href="#http://www.example.com/insertChangeConstraint" title="http://www.example.com/insertChangeConstraint">
+         <span>insert change constraint</span>
+      </a>
    </li>
    <li>
-      <a href="#hasValue"
-         title="https://prometheus-metric-ontology.ericsson.com/#hasValue">hasValue</a>
+      <a href="#http://www.example.com/mergeChangeConstraint" title="http://www.example.com/mergeChangeConstraint">
+         <span>merge change constraint</span>
+      </a>
+   </li>
+   <li>
+      <a href="#http://www.example.com/moveChangeConstraint" title="http://www.example.com/moveChangeConstraint">
+         <span>move change constraint</span>
+      </a>
+   </li>
+   <li>
+      <a href="#http://www.example.com/notificationConstraint" title="http://www.example.com/notificationConstraint">
+         <span>notification constraint</span>
+      </a>
+   </li>
+   <li>
+      <a href="#http://www.example.com/notificationPolicy" title="http://www.example.com/notificationPolicy">
+         <span>notification policy</span>
+      </a>
+   </li>
+   <li>
+      <a href="#http://www.example.com/policyObligation" title="http://www.example.com/policyObligation">
+         <span>policy obligation</span>
+      </a>
+   </li>
+   <li>
+      <a href="#http://www.example.com/updateChangeConstraint" title="http://www.example.com/updateChangeConstraint">
+         <span>update change constraint</span>
+      </a>
+   </li>
+   <li>
+      <a href="#http://www.example.com/userActor" title="http://www.example.com/userActor">
+         <span>user actor</span>
+      </a>
    </li>
 </ul><iframe align="center" width="100%" height ="500px" src="webvowl/index.html"></iframe> 
