--- a/sections/introduction-en.html
+++ b/sections/introduction-en.html
@@ -22,6 +22,7 @@ This is a place holder text for the introduction. The introduction should briefl
 <tr><td><b>lode</b></td><td>&lt;http://linkedevents.org/ontology&gt;</td></tr>
 <tr><td><b>rei-constraint</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiConstraint.owl&gt;</td></tr>
 <tr><td><b>DUL</b></td><td>&lt;http://www.ontologydesignpatterns.org/ont/dul/DUL.owl&gt;</td></tr>
+<tr><td><b>rei-action</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiAction.owl&gt;</td></tr>
 <tr><td><b>time</b></td><td>&lt;http://www.w3.org/2006/time&gt;</td></tr>
 <tr><td><b>vann</b></td><td>&lt;http://purl.org/vocab/vann&gt;</td></tr>
 <tr><td><b>rei-policy</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiPolicy.owl&gt;</td></tr>
