--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
- <link rel="stylesheet" href="resources/primer.css" media="screen" />    <link rel="stylesheet" href="resources/rec.css" media="screen" />    <link rel="stylesheet" href="resources/extra.css" media="screen" />    <link rel="stylesheet" href="resources/owl.css" media="screen" />    <title>Change Detection Ontology (CDO)</title>
+ <link rel="stylesheet" href="resources/primer.css" media="screen" />    <link rel="stylesheet" href="resources/rec.css" media="screen" />    <link rel="stylesheet" href="resources/extra.css" media="screen" />    <link rel="stylesheet" href="resources/owl.css" media="screen" />    <title>Prometheus Metric Ontology (PMO)</title>
 
 
 <!-- SCHEMA.ORG METADATA -->
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"TechArticle","url":"https://change-detection-ontology.adaptcentre.ie/#","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://change-detection-ontology.adaptcentre.ie/#","name":"Change Detection Ontology (CDO)", "headline":"The Change Detection Ontology (CDO) provides a set of classes, properties, and restrictions that can be used to represent and interchange provenance and metadata information relating to changes that occur within source data that has created an RDF dataset. It can also be specialized to create new classes and properties to model provenance and metadata information for domain specific changes.", "datePublished":"20 April 2022", "version":"20 April 2022", "license":"http://creativecommons.org/publicdomain/zero/1.0/", "author":[{"@type":"Person","name":"Alex Randles"},{"@type":"Person","name":"Declan O'Sullivan"}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"TechArticle","url":"https://prometheus-metric-ontology.ericsson.com/#","image":"http://vowl.visualdataweb.org/webvowl/#iri=https://prometheus-metric-ontology.ericsson.com/#","name":"Prometheus Metric Ontology (PMO)", "headline":"The Prometheus Metric Ontology (PMO) provides a set of classes, properties, and restrictions that can be used to represent and interchange provenance and metadata information relating to Prometheus metric information.", "datePublished":"4 July 2022", "version":"4 July 2022", "license":"http://creativecommons.org/publicdomain/zero/1.0/", "author":[{"@type":"Person","name":"Alex Randles"},{"@type":"Person","name":"John Keeney"},{"@type":"Person","name":"Liam Fallon"}]}</script>
 
 <script src="resources/jquery.js"></script> 
 <script src="resources/marked.min.js"></script> 
@@ -59,25 +59,22 @@ function loadTOC(){
 <div class="container">
 <div class="head">
 <div style="float:right">language <a href="index-en.html"><b>en</b></a> </div>
-<h1>Change Detection Ontology (CDO)</h1>
-<h2>Release 20 April 2022</h2>
+<h1>Prometheus Metric Ontology (PMO)</h1>
+<h2>Release 4 July 2022</h2>
 
 
 <dl>
 <dt>Latest version:</dt>
-<dd><a href="https://change-detection-ontology.adaptcentre.ie/#">https://change-detection-ontology.adaptcentre.ie/#</a></dd>
+<dd><a href="https://prometheus-metric-ontology.ericsson.com/#">https://prometheus-metric-ontology.ericsson.com/#</a></dd>
 <dt>Revision:</dt>
-<dd>20 April 2022</dd>
+<dd>4 July 2022</dd>
 <dt>Authors:</dt>
-<dd>Alex Randles</dd><dd>Declan O'Sullivan</dd>
-
-<dt>Imported Ontologies:</dt>
-<dd><a href="http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiConstraint.owl#">ReiConstraint.owl#</a></dd><dd><a href="http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiDeontic.owl#">ReiDeontic.owl#</a></dd><dd><a href="http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiPolicy.owl#">ReiPolicy.owl#</a></dd>
+<dd>Alex Randles</dd><dd>John Keeney</dd><dd>Liam Fallon</dd>
 
 <dt>Download serialization:</dt><dd><span><a href="ontology.jsonld" target="_blank"><img src="https://img.shields.io/badge/Format-JSON_LD-blue.svg" alt="JSON-LD" /></a> </span><span><a href="ontology.rdf" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML" /></a> </span><span><a href="ontology.nt" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples" /></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL" /></a> </span></dd><dt>License:</dt><dd><a href="http://creativecommons.org/publicdomain/zero/1.0/" target="_blank"><img src="https://img.shields.io/badge/License-http://creativecommons.org/publicdomain/zero/1.0/-blue.svg" alt="http://creativecommons.org/publicdomain/zero/1.0/" /></a>
 </dd><dt>Visualization:</dt><dd><a href="webvowl/index.html#" target="_blank"><img src="https://img.shields.io/badge/Visualize_with-WebVowl-blue.svg" alt="Visualize with WebVowl" /></a></dd>
 <!-- <dt>Evaluation:</dt><dd><a href="OOPSEvaluation/oopsEval.html#" target="_blank"><img src="https://img.shields.io/badge/Evaluate_with-OOPS! (OntOlogy Pitfall Scanner!)-blue.svg" alt="Evaluate with OOPS!" /></a></dd> --><dt>Cite as:</dt>
-<dd>Alex Randles, Declan O'Sullivan. Change Detection Ontology (CDO). Revision: 20 April 2022.</dd>
+<dd>Alex Randles, John Keeney, Liam Fallon. Prometheus Metric Ontology (PMO). Revision: 4 July 2022.</dd>
 </dl>
 
 <hr/>
