--- a/sections/description-en.html
+++ b/sections/description-en.html
@@ -4,7 +4,7 @@
 <h5 style="font-weight: bold;">Ontology Pitfall Scanner</h5>
 The ontology has been assessed using the <a href="https://oops.linkeddata.es/index.jsp"  target="_blank">Ontology Pitfall Scanner</a> and no design anomalies have been found. 
 <br>
-<img src="images/oops_free.png" alt="Free of pitfalls" width="100" height="69.6">
+<img src="./images/oops_free.png" alt="Free of pitfalls" width="100" height="69.6">
 <br>
 <h5 style="font-weight: bold;">Sample Graph</h5>
 A sample graph has been generated represented using PMO which relates to the servers availability (up). The metric has a value (pmo:hasValue) of 1 if available and 0 if not available: <a href="https://raw.githubusercontent.com/alex-randles/Prometheus-Metric-Ontology/main/example_prometheus_metric.ttl" target="_blank" >Graph Link</a>
