--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -25,8 +25,8 @@ This ontology has the following classes and properties.</span>
          title="https://prometheus-metric-ontology.ericsson.com/#generatedByMetric">generatedByMetric</a>
    </li>
    <li>
-      <a href="#hasMetricQuery"
-         title="https://prometheus-metric-ontology.ericsson.com/#hasMetricQuery">hasMetricQuery</a>
+      <a href="#hasQueryInformation"
+         title="https://prometheus-metric-ontology.ericsson.com/#hasQueryInformation">hasQueryInformation</a>
    </li>
    <li>
       <a href="#hasResult"
