--- a/sections/crossref-en.html
+++ b/sections/crossref-en.html
@@ -429,6 +429,12 @@ This section provides details for each class and property defined by Prometheus 
                   title="https://prometheus-metric-ontology.ericsson.com/#MetricQuery">MetricQuery</a>
                <sup class="type-c" title="class">c</sup>
             </dd>
+            <dt>is inverse of</dt>
+            <dd>
+               <a href="#usedByMetric"
+                  title="https://prometheus-metric-ontology.ericsson.com/#usedByMetric">usedByMetric</a>
+               <sup class="type-op" title="object property">op</sup>
+            </dd>
          </dl>
       </div>
    </div>
@@ -557,9 +563,8 @@ This section provides details for each class and property defined by Prometheus 
             </dd>
             <dt>is inverse of</dt>
             <dd>
-               <a href="https://prometheus-metric-ontology.ericsson.com/#hasMetricQuery"
-                  target="_blank"
-                  title="https://prometheus-metric-ontology.ericsson.com/#hasMetricQuery">has metric query</a>
+               <a href="#hasQueryInformation"
+                  title="https://prometheus-metric-ontology.ericsson.com/#hasQueryInformation">hasQueryInformation</a>
                <sup class="type-op" title="object property">op</sup>
             </dd>
          </dl>
