--- a/sections/abstract-en.html
+++ b/sections/abstract-en.html
@@ -1,2 +1,2 @@
-<h2>Abstract</h2><span class="markdown">
-The Prometheus Metric Ontology (PMO) provides a set of classes, properties, and restrictions that can be used to represent and interchange provenance and metadata information relating to Prometheus metric information.</span>
+<h2>Abstract</h2>
+The Prometheus Metric Ontology (PMO) provides a set of classes, properties, and restrictions that can be used to represent and interchange provenance and metadata information relating to Prometheus metric information <a href="#bib-Prometheus">[Prometheus]</a>.
