--- a/sections/references-en.html
+++ b/sections/references-en.html
@@ -1,5 +1,9 @@
-
-<h2 id="ref" class="list">References <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
-<span class="markdown">
-Add your references here. It is recommended to have them as a list.</span>
+<div id="references">
+	<h2 id="ref" class="list">References <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
+    <ul>
+		<li id="bib-Prometheus"><strong>[Prometheus]</strong>
+			<a href="https://prometheus.io/" property="dc:references"><cite>Prometheus Website</cite></a>. 2014. URL: <a href="https://prometheus.io/" property="dc:references">Website URL</a>
+		</li>
+	</ul>
+</div>
 
