--- a/sections/crossref-en.html
+++ b/sections/crossref-en.html
@@ -63,8 +63,8 @@ This section provides details for each class and property defined by Change Dete
       <dl class="description">
          <dt>is in domain of</dt>
          <dd>
-            <a href="#hasEvent"
-               title="https://change-detection-ontology.adaptcentre.ie/#hasEvent">hasEvent</a>
+            <a href="#hasChange"
+               title="https://change-detection-ontology.adaptcentre.ie/#hasChange">hasEvent</a>
             <sup class="type-op" title="object property">op</sup>, <a href="#hasOwner"
                title="https://change-detection-ontology.adaptcentre.ie/#hasOwner">hasOwner</a>
             <sup class="type-op" title="object property">op</sup>
@@ -207,8 +207,8 @@ This section provides details for each class and property defined by Change Dete
    <h3 id="properties" class="list">Object Properties</h3>
    <ul class="hlist">
       <li>
-         <a href="#hasEvent"
-            title="https://change-detection-ontology.adaptcentre.ie/#hasEvent">hasEvent</a>
+         <a href="#hasChange"
+            title="https://change-detection-ontology.adaptcentre.ie/#hasChange">hasEvent</a>
       </li>
       <li>
          <a href="#hasOwner"
@@ -223,15 +223,15 @@ This section provides details for each class and property defined by Change Dete
             title="https://change-detection-ontology.adaptcentre.ie/#inChamgeLog">inChamgeLog</a>
       </li>
    </ul>
-   <div class="entity" id="hasEvent">
+   <div class="entity" id="hasChange">
       <h3>hasEvent<sup class="type-op" title="object property">op</sup>
          <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#objectproperties">Object Property ToC</a>
          </span>
       </h3>
       <p>
-         <strong>IRI:</strong> https://change-detection-ontology.adaptcentre.ie/#hasEvent</p>
+         <strong>IRI:</strong> https://change-detection-ontology.adaptcentre.ie/#hasChange</p>
       <div class="comment">
-         <span class="markdown">An event within a certain event log.</span>
+         <span class="markdown">A change within a particular change log.</span>
       </div>
       <dl class="definedBy">
          <dt>Is defined by</dt>
@@ -351,7 +351,7 @@ This section provides details for each class and property defined by Change Dete
       <p>
          <strong>IRI:</strong> https://change-detection-ontology.adaptcentre.ie/#inChamgeLog</p>
       <div class="comment">
-         <span class="markdown">An event within an event log.</span>
+         <span class="markdown">A change within a change log.</span>
       </div>
       <dl class="definedBy">
          <dt>Is defined by</dt>
@@ -376,8 +376,8 @@ This section provides details for each class and property defined by Change Dete
             </dd>
             <dt>is inverse of</dt>
             <dd>
-               <a href="#hasEvent"
-                  title="https://change-detection-ontology.adaptcentre.ie/#hasEvent">hasEvent</a>
+               <a href="#hasChange"
+                  title="https://change-detection-ontology.adaptcentre.ie/#hasChange">hasEvent</a>
                <sup class="type-op" title="object property">op</sup>
             </dd>
          </dl>
@@ -621,6 +621,13 @@ This section provides details for each class and property defined by Change Dete
             <a href="#ChangeLog"
                title="https://change-detection-ontology.adaptcentre.ie/#ChangeLog">ChangeLog</a>
             <sup class="type-c" title="class">c</sup>
+         </dd>
+         <dt>has facts</dt>
+         <dd>
+            <a href="#hasChange"
+               title="https://change-detection-ontology.adaptcentre.ie/#hasChange">hasEvent</a>
+            <sup class="type-op" title="object property">op</sup> 
+            <a href="#http://www.example.com/insertChange" title="http://www.example.com/insertChange">insert change</a>
          </dd>
       </dl>
    </div>
