--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -45,8 +45,8 @@ This ontology has the following classes and properties.</span>
    </li>
 </ul><h4>Object Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
-      <a href="#hasEvent"
-         title="https://change-detection-ontology.adaptcentre.ie/#hasEvent">hasEvent</a>
+      <a href="#hasChange"
+         title="https://change-detection-ontology.adaptcentre.ie/#hasChange">hasEvent</a>
    </li>
    <li>
       <a href="#hasOwner"
