--- a/sections/crossref-en.html
+++ b/sections/crossref-en.html
@@ -39,9 +39,7 @@ This section provides details for each class and property defined by Change Dete
       </li>
       <li>
          <a href="#UpdateSourceData"
-            title="https://change-detection-ontology.adaptcentre.ie/#UpdateSourceData">
-            <span>UpdateSourceData</span>
-         </a>
+            title="https://change-detection-ontology.adaptcentre.ie/#UpdateSourceData">UpdateSourceData</a>
       </li>
    </ul>
    <div class="entity" id="ChangeLog">
@@ -191,6 +189,15 @@ This section provides details for each class and property defined by Change Dete
       </h3>
       <p>
          <strong>IRI:</strong> https://change-detection-ontology.adaptcentre.ie/#UpdateSourceData</p>
+      <div class="comment">
+         <span class="markdown">Data has been updated within the source data.</span>
+      </div>
+      <dl class="definedBy">
+         <dt>Is defined by</dt>
+         <dd>
+            <a href="https://change-detection-ontology.adaptcentre.ie/#">https://change-detection-ontology.adaptcentre.ie/#</a>
+         </dd>
+      </dl>
       <dl class="description">
          <dt>has super-classes</dt>
          <dd>
@@ -199,8 +206,6 @@ This section provides details for each class and property defined by Change Dete
                title="http://linkedevents.org/ontology/Event">event</a>
             <sup class="type-c" title="class">c</sup>
          </dd>
-         <dt>is also defined as</dt>
-         <dd>named individual</dd>
       </dl>
    </div>
 </div><div xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" id="objectproperties">
@@ -598,11 +603,6 @@ This section provides details for each class and property defined by Change Dete
          </a>
       </li>
       <li>
-         <a href="#http://www.example.com/updateChangeConstraint" title="http://www.example.com/updateChangeConstraint">
-            <span>update change constraint</span>
-         </a>
-      </li>
-      <li>
          <a href="#http://www.example.com/userActor" title="http://www.example.com/userActor">
             <span>user actor</span>
          </a>
@@ -838,22 +838,6 @@ This section provides details for each class and property defined by Change Dete
                target="_blank"
                title="http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiDeontic.owl#Obligation">obligation</a>
             <sup class="type-c" title="class">c</sup>
-         </dd>
-      </dl>
-   </div>
-   <div class="entity" id="http://www.example.com/updateChangeConstraint">
-      <h3>update change constraint<sup class="type-ni" title="named individual">ni</sup>
-         <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#namedindividuals">Named Individual ToC</a>
-         </span>
-      </h3>
-      <p>
-         <strong>IRI:</strong> http://www.example.com/updateChangeConstraint</p>
-      <dl class="description">
-         <dt>belongs to</dt>
-         <dd>
-            <a href="http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiConstraint.owl#SimpleConstraint"
-               target="_blank"
-               title="http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiConstraint.owl#SimpleConstraint">simple constraint</a>
          </dd>
       </dl>
    </div>
