--- a/sections/introduction-en.html
+++ b/sections/introduction-en.html
@@ -10,23 +10,23 @@ This is a place holder text for the introduction. The introduction should briefl
 <tr><td><b>cdo</b></td><td>&lt;https://change-detection-ontology.adaptcentre.ie/#&gt;</td></tr>
 <tr><td></td><td></td></tr>
 <tr><td><b>owl</b></td><td>&lt;http://www.w3.org/2002/07/owl&gt;</td></tr>
+<tr><td><b>ReiConstraint</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiConstraint.owl&gt;</td></tr>
 <tr><td><b>xsd</b></td><td>&lt;http://www.w3.org/2001/XMLSchema&gt;</td></tr>
 <tr><td><b>ReiAction</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiAction.owl&gt;</td></tr>
 <tr><td><b>skos</b></td><td>&lt;http://www.w3.org/2004/02/skos/core&gt;</td></tr>
-<tr><td><b>ns0</b></td><td>&lt;http://purl.org/vocab/vann&gt;</td></tr>
 <tr><td><b>rdfs</b></td><td>&lt;http://www.w3.org/2000/01/rdf-schema&gt;</td></tr>
 <tr><td><b>ReiEntity</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiEntity.owl&gt;</td></tr>
-<tr><td><b>ns2</b></td><td>&lt;http://linkedevents.org/ontology&gt;</td></tr>
-<tr><td><b>ns4</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiDeontic.owl&gt;</td></tr>
-<tr><td><b>ns3</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiPolicy.owl&gt;</td></tr>
-<tr><td><b>ns5</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiConstraint.owl&gt;</td></tr>
+<tr><td><b>ReiDeontic</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiDeontic.owl&gt;</td></tr>
+<tr><td><b>ReiPolicy</b></td><td>&lt;http://www.cs.umbc.edu/~lkagal1/rei/ontologies/ReiPolicy.owl&gt;</td></tr>
 <tr><td><b>rdf</b></td><td>&lt;http://www.w3.org/1999/02/22-rdf-syntax-ns&gt;</td></tr>
+<tr><td><b>terms</b></td><td>&lt;http://purl.org/dc/terms&gt;</td></tr>
 <tr><td><b>www</b></td><td>&lt;http://www.example.com&gt;</td></tr>
 <tr><td><b>xml</b></td><td>&lt;http://www.w3.org/XML/1998/namespace&gt;</td></tr>
 <tr><td><b>DUL</b></td><td>&lt;http://www.ontologydesignpatterns.org/ont/dul/DUL.owl&gt;</td></tr>
 <tr><td><b>time</b></td><td>&lt;http://www.w3.org/2006/time&gt;</td></tr>
+<tr><td><b>vann</b></td><td>&lt;http://purl.org/vocab/vann&gt;</td></tr>
 <tr><td><b>foaf</b></td><td>&lt;http://xmlns.com/foaf/0.1&gt;</td></tr>
-<tr><td><b>dc</b></td><td>&lt;http://purl.org/dc/terms&gt;</td></tr>
+<tr><td><b>ontology</b></td><td>&lt;http://linkedevents.org/ontology&gt;</td></tr>
 </tbody>
 </table>
 </div>
