--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -39,9 +39,7 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#UpdateSourceData"
-         title="https://change-detection-ontology.adaptcentre.ie/#UpdateSourceData">
-         <span>UpdateSourceData</span>
-      </a>
+         title="https://change-detection-ontology.adaptcentre.ie/#UpdateSourceData">UpdateSourceData</a>
    </li>
 </ul><h4>Object Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
@@ -133,11 +131,6 @@ This ontology has the following classes and properties.</span>
    <li>
       <a href="#http://www.example.com/policyObligation" title="http://www.example.com/policyObligation">
          <span>policy obligation</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://www.example.com/updateChangeConstraint" title="http://www.example.com/updateChangeConstraint">
-         <span>update change constraint</span>
       </a>
    </li>
    <li>
