--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -9,33 +9,23 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#DatatypeSourceData"
-         title="https://change-detection-ontology.adaptcentre.ie/#DatatypeSourceData">
-         <span>DatatypeSourceData</span>
-      </a>
+         title="https://change-detection-ontology.adaptcentre.ie/#DatatypeSourceData">DatatypeSourceData</a>
    </li>
    <li>
       <a href="#DeleteSourceData"
-         title="https://change-detection-ontology.adaptcentre.ie/#DeleteSourceData">
-         <span>DeleteSourceData</span>
-      </a>
+         title="https://change-detection-ontology.adaptcentre.ie/#DeleteSourceData">DeleteSourceData</a>
    </li>
    <li>
       <a href="#InsertSourceData"
-         title="https://change-detection-ontology.adaptcentre.ie/#InsertSourceData">
-         <span>InsertSourceData</span>
-      </a>
+         title="https://change-detection-ontology.adaptcentre.ie/#InsertSourceData">InsertSourceData</a>
    </li>
    <li>
       <a href="#MergeSourceData"
-         title="https://change-detection-ontology.adaptcentre.ie/#MergeSourceData">
-         <span>MergeSourceData</span>
-      </a>
+         title="https://change-detection-ontology.adaptcentre.ie/#MergeSourceData">MergeSourceData</a>
    </li>
    <li>
       <a href="#MoveSourceData"
-         title="https://change-detection-ontology.adaptcentre.ie/#MoveSourceData">
-         <span>MoveSourceData</span>
-      </a>
+         title="https://change-detection-ontology.adaptcentre.ie/#MoveSourceData">MoveSourceData</a>
    </li>
    <li>
       <a href="#UpdateSourceData"
@@ -44,19 +34,27 @@ This ontology has the following classes and properties.</span>
 </ul><h4>Object Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
       <a href="#hasChange"
-         title="https://change-detection-ontology.adaptcentre.ie/#hasChange">hasEvent</a>
+         title="https://change-detection-ontology.adaptcentre.ie/#hasChange">hasChange</a>
+   </li>
+   <li>
+      <a href="#hasCurrentSource"
+         title="https://change-detection-ontology.adaptcentre.ie/#hasCurrentSource">hasCurrentSource</a>
    </li>
    <li>
       <a href="#hasOwner"
          title="https://change-detection-ontology.adaptcentre.ie/#hasOwner">hasOwner</a>
    </li>
    <li>
-      <a href="#ownedBy"
-         title="https://change-detection-ontology.adaptcentre.ie/#ownedBy">hasOwner</a>
+      <a href="#hasPreviousSource"
+         title="https://change-detection-ontology.adaptcentre.ie/#hasPreviousSource">hasPreviousSource</a>
    </li>
    <li>
-      <a href="#inChamgeLog"
-         title="https://change-detection-ontology.adaptcentre.ie/#inChamgeLog">inChamgeLog</a>
+      <a href="#inChangeLog"
+         title="https://change-detection-ontology.adaptcentre.ie/#inChangeLog">inChangeLog</a>
+   </li>
+   <li>
+      <a href="#ownedBy"
+         title="https://change-detection-ontology.adaptcentre.ie/#ownedBy">ownedBy</a>
    </li>
 </ul><h4>Data Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
@@ -73,69 +71,6 @@ This ontology has the following classes and properties.</span>
    </li>
    <li>
       <a href="#hasThreshold"
-         title="https://change-detection-ontology.adaptcentre.ie/#hasThreshold">
-         <span>hasThreshold</span>
-      </a>
-   </li>
-</ul><h4>Named Individuals</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
-   <li>
-      <a href="#http://www.example.com/changeLog" title="http://www.example.com/changeLog">
-         <span>change log</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://www.example.com/datatypeChangeConstraint" title="http://www.example.com/datatypeChangeConstraint">
-         <span>datatype change constraint</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://www.example.com/deleteChangeConstraint" title="http://www.example.com/deleteChangeConstraint">
-         <span>delete change constraint</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://www.example.com/detectionTime" title="http://www.example.com/detectionTime">
-         <span>detection time</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://www.example.com/insertChange" title="http://www.example.com/insertChange">
-         <span>insert change</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://www.example.com/insertChangeConstraint" title="http://www.example.com/insertChangeConstraint">
-         <span>insert change constraint</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://www.example.com/mergeChangeConstraint" title="http://www.example.com/mergeChangeConstraint">
-         <span>merge change constraint</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://www.example.com/moveChangeConstraint" title="http://www.example.com/moveChangeConstraint">
-         <span>move change constraint</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://www.example.com/notificationConstraint" title="http://www.example.com/notificationConstraint">
-         <span>notification constraint</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://www.example.com/notificationPolicy" title="http://www.example.com/notificationPolicy">
-         <span>notification policy</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://www.example.com/policyObligation" title="http://www.example.com/policyObligation">
-         <span>policy obligation</span>
-      </a>
-   </li>
-   <li>
-      <a href="#http://www.example.com/userActor" title="http://www.example.com/userActor">
-         <span>user actor</span>
-      </a>
+         title="https://change-detection-ontology.adaptcentre.ie/#hasThreshold">hasThreshold</a>
    </li>
 </ul><iframe align="center" width="100%" height ="500px" src="webvowl/index.html"></iframe> 
