--- a/sections/crossref-en.html
+++ b/sections/crossref-en.html
@@ -491,12 +491,12 @@ This section provides details for each class and property defined by Change Dete
    <h3 id="dataproperties-headline" class="list">Data Properties</h3>
    <ul class="hlist">
       <li>
-         <a href="#detectionEnd"
-            title="https://change-detection-ontology.adaptcentre.ie/#detectionEnd">detectionEnd</a>
+         <a href="#hasDetectionEnd"
+            title="https://change-detection-ontology.adaptcentre.ie/#hasDetectionEnd">hasDetectionEnd</a>
       </li>
       <li>
-         <a href="#detectionStart"
-            title="https://change-detection-ontology.adaptcentre.ie/#detectionStart">detectionStart</a>
+         <a href="#hasDetectionStart"
+            title="https://change-detection-ontology.adaptcentre.ie/#hasDetectionStart">hasDetectionStart</a>
       </li>
       <li>
          <a href="#hasReason"
@@ -507,13 +507,13 @@ This section provides details for each class and property defined by Change Dete
             title="https://change-detection-ontology.adaptcentre.ie/#hasThreshold">hasThreshold</a>
       </li>
    </ul>
-   <div class="entity" id="detectionEnd">
-      <h3>detectionEnd<sup class="type-dp" title="data property">dp</sup>
+   <div class="entity" id="hasDetectionEnd">
+      <h3>hasDetectionEnd<sup class="type-dp" title="data property">dp</sup>
          <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#dataproperties">Data Property ToC</a>
          </span>
       </h3>
       <p>
-         <strong>IRI:</strong> https://change-detection-ontology.adaptcentre.ie/#detectionEnd</p>
+         <strong>IRI:</strong> https://change-detection-ontology.adaptcentre.ie/#hasDetectionEnd</p>
       <div class="comment">
          <span class="markdown">The time when the notification policy is terminated.</span>
       </div>
@@ -543,13 +543,13 @@ This section provides details for each class and property defined by Change Dete
          </dl>
       </div>
    </div>
-   <div class="entity" id="detectionStart">
-      <h3>detectionStart<sup class="type-dp" title="data property">dp</sup>
+   <div class="entity" id="hasDetectionStart">
+      <h3>hasDetectionStart<sup class="type-dp" title="data property">dp</sup>
          <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#dataproperties">Data Property ToC</a>
          </span>
       </h3>
       <p>
-         <strong>IRI:</strong> https://change-detection-ontology.adaptcentre.ie/#detectionStart</p>
+         <strong>IRI:</strong> https://change-detection-ontology.adaptcentre.ie/#hasDetectionStart</p>
       <div class="comment">
          <span class="markdown">The time when the notification policy was created.</span>
       </div>
