--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -58,12 +58,12 @@ This ontology has the following classes and properties.</span>
    </li>
 </ul><h4>Data Properties</h4><ul xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" class="hlist">
    <li>
-      <a href="#detectionEnd"
-         title="https://change-detection-ontology.adaptcentre.ie/#detectionEnd">detectionEnd</a>
+      <a href="#hasDetectionEnd"
+         title="https://change-detection-ontology.adaptcentre.ie/#hasDetectionEnd">hasDetectionEnd</a>
    </li>
    <li>
-      <a href="#detectionStart"
-         title="https://change-detection-ontology.adaptcentre.ie/#detectionStart">detectionStart</a>
+      <a href="#hasDetectionStart"
+         title="https://change-detection-ontology.adaptcentre.ie/#hasDetectionStart">hasDetectionStart</a>
    </li>
    <li>
       <a href="#hasReason"
